--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>ssd_web_admin</module>
         <module>ssd_service</module>
         <module>ssd_common</module>
+        <module>ssd_security</module>
     </modules>
     <properties>
         <spring.version>4.3.5.RELEASE</spring.version>
@@ -25,6 +26,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <jdk.version>1.8</jdk.version>
+        <spring.security.version>4.2.3.RELEASE</spring.security.version>
     </properties>
 
 </project>
